# terai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: agents.yaml  guardrails.yaml  models.yaml  tools.yaml  workflows.yaml
docs/: AGENTS.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md
prompts/: saved_prompts.json
prompts/system_prompts/: research_agent.txt
scripts/: benchmark.py  deploy.sh  setup.sh
src/agents/: __init__.py  code_agent.py  debug_agent.py  file_agent.py  manager_agent.py  research_agent.py  terminal_agent.py
src/core/: __init__.py  agent.py  context.py  infinity_matrix.py  message.py  mind_unlocker.py  neural_accelerator.py  parallel_executor.py  power_boost.py  prompt_enhancer.py  quantum_consciousness.py  response_optimizer.py  runner.py  turbo_engine.py
src/guardrails/: __init__.py  input_guardrails.py  output_guardrails.py  pii_filter.py  relevance_filter.py  safety_classifier.py  tool_safeguards.py
src/memory/: __init__.py  cache_manager.py  conversation_memory.py  semantic_memory.py  smart_context.py  vector_store.py
src/models/: __init__.py  anthropic_client.py  local_model.py  model_manager.py  openai_client.py
src/orchestration/: __init__.py  handoff_manager.py  parallel_executor.py  state_machine.py  workflow.py
src/prompts/: __init__.py  system_prompts.py
src/tools/: __init__.py  base_tool.py  web_search.py
src/tools/action_tools/: __init__.py  api_caller.py  code_executor.py  file_writer.py  terminal_executor.py
src/tools/data_tools/: __init__.py  database_query.py  file_reader.py  web_search.py
src/tools/orchestration_tools/: __init__.py  agent_handoff.py  subprocess_manager.py
src/ui/: __init__.py  formatting.py  streaming.py  terminal_ui.py
src/utils/: __init__.py  config.py  error_handler.py  logger.py  telemetry.py
tests/: __init__.py
tests/evals/: __init__.py  benchmarks.py  eval_framework.py  test_cases.json
tests/integration/: __init__.py  test_orchestration.py  test_workflows.py
tests/unit/: __init__.py  test_agents.py  test_guardrails.py  test_tools.py
